# wagtail-streaming

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/wagtailstreaming/: __init__.py  admin.py  admin_helpers.py  apps.py  blocks.py  conversion_utils.py  dataclasses.py  download_utils.py  forms.py  models.py  panels.py  permissions.py  settings.py  signals.py  task_utils.py  tasks.py  template_utils.py  utils.py  validators.py  wagtail_hooks.py  widgets.py
src/wagtailstreaming/api/: serializers.py  views.py
src/wagtailstreaming/management/commands/: create_streams.py
src/wagtailstreaming/migrations/: 0001_initial.py
src/wagtailstreaming/static/wagtailstreaming/css/: compare.css  embed.css
src/wagtailstreaming/static/wagtailstreaming/js/: chooser.js  modal.js  tabs.js  telepath.js
src/wagtailstreaming/templates/wagtailstreaming_templates/chooser/: chooser.html  results.html
src/wagtailstreaming/templates/wagtailstreaming_templates/fields/: base_field_as_li.html  file_field.html  file_field_as_li.html  thumbnail_field.html  thumbnail_field_as_li.html
src/wagtailstreaming/templates/wagtailstreaming_templates/homepage/: summary.html
src/wagtailstreaming/templates/wagtailstreaming_templates/instances/: add.html  delete.html  edit.html  index.html  list.html  results.html  usage.html
src/wagtailstreaming/templates/wagtailstreaming_templates/meta/: open_graph.html
src/wagtailstreaming/templates/wagtailstreaming_templates/permissions/includes/: stream_perms_formset.html
src/wagtailstreaming/templates/wagtailstreaming_templates/widgets/: chooser.html  compare.html  dash_stream.html  embed.html  hls_stream.html  player.html  raw_stream.html  stream_mirrors.html
src/wagtailstreaming/urls/: __init__.py  _public_urls.py  admin_urls.py
src/wagtailstreaming/views/: chooser.py  embed.py  stream.py  utils.py
